# template-teleporter

./: .clinerules  .gitignore  Cargo.toml  README.md  cliff.toml  cross.toml  deny.toml  renovate.json
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  internal.md
.github/workflows/: ci.yml  find-mutants-in-pr.yml  lint.yml
.roo/: mcp.json
crates/aws-lambda/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: filesystem_backend.rs  filesystem_backend_tests.rs  lib.rs  lib_tests.rs  state_manager.rs  state_manager_tests.rs  types.rs  updater.rs  updater_tests.rs  utils.rs  utils_tests.rs
crates/developer_platforms/: Cargo.toml
crates/developer_platforms/src/: auth.rs  error.rs  github.rs  lib.rs  types.rs  utils.rs
crates/development_platforms/: Cargo.toml
crates/development_platforms/src/: errors.rs  lib.rs  lib_tests.rs
specs/: core_library_design.md  developer_platforms_spec.md  service.md  template_teleporter.md
