[package]
authors.workspace = true
description = "Core business logic for the Template-Teleporter"
edition = "2021"
license-file.workspace = true
name = "template_teleporter_core"
repository.workspace = true
version.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "1.0"
hex = "0.4"
serde_yaml = "0.9"
async-trait = "0.1"
serde_json = "1.0"                                 # For FilesystemBackend JSON serialization
tokio = { version = "1", features = ["fs", "sync"] }     # For FilesystemBackend Mutex
# Cloud-specific dependencies removed, core is now cloud-agnostic.
# Implementations using these will be in separate crates (e.g., aws_backend).

[dev-dependencies]
tokio = { version = "=1.45.1", features = [
    "macros",
    "rt",
] } # Keep this for tests needing full runtime
tempfile = "=3.20.0"
mockall = "=0.12.1" # For mocking traits in tests
futures = "=0.3.31"
